# speakflow

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build-binaries.yml
src/: analysis.rs  app.rs  audio.rs  coach.rs  history.rs  llm.rs  main.rs  personas.rs  stt.rs  tts.rs
